system/services/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: damascus
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-dns-label-name: poshcode
  # addresses:
  #   - type: Hostname
  #     value: poshcode
  listeners:
  - name: http-1
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https-poshcode
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: poshcode.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: poshcode-tls
  - name: https-dex
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: dex.poshcode.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: dex-poshcode-tls
  - name: https-grafana
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: grafana.poshcode.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: grafana-poshcode-tls
  - name: https-prometheus
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: prometheus.poshcode.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: prometheus-poshcode-tls
  - name: https-alerts
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: alerts.poshcode.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: alerts-poshcode-tls
